--- a/views/templates/footer.html
+++ b/views/templates/footer.html
@@ -1,6 +1,6 @@
 <footer>
    <div class="text-center">
-      Private Alpha V0.4 <span class="entypo-heart" title="Made with love"></span>
+      Private Beta V0.1 <span class="entypo-heart" title="Made with love"></span>
       <font size="1">Big thanks to <a id="IGDB" href="https://www.igdb.com/" target="_blank">IGDB</a> for providing this awesome API</font>
     </div>
 </footer>
