--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
 					<div class="centering">
 						<div class="col col-xs-11 col-xs-offset-1 col-sm-8 col-sm-offset-4 col-md-8 col-md-offset-5">
 							<div id="logo" class="col col-xs-11 col-sm-8 col-md-8">
-								<img src="/asets/logo_title.svg" class="svg">
+								<img id="app_logo" src="/asets/logo_title.svg" class="svg">
 						</div>
 	  				<div class="col-xs-12 col-sm-12 col-md-12" id="social">
 			        <div class="col-xs-4 col-sm-2 col-md-1">
