--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,9 +10,12 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" async>
 	<link href="/css/profile.css" rel="stylesheet" type="text/css">
 	<link href="/css/navbar.css" rel="stylesheet" type="text/css">
+	<link href="/css/mygames.css" rel="stylesheet" type="text/css">
 	<link href="/css/heart_animation.css" rel="stylesheet" type="text/css" async>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css" async>
-		<script src="//cdn.jsdelivr.net/jdenticon/1.4.0/jdenticon.min.js" async></script>
+	<link rel="stylesheet" href="../../css/loader_animation.css" type="text/css" async><!-- loading animation Stylesheet -->
+
+	<script src="//cdn.jsdelivr.net/jdenticon/1.4.0/jdenticon.min.js" async></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.11/angular.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.js"></script>
