--- a/views/js/partials/messages.html
+++ b/views/js/partials/messages.html
@@ -87,14 +87,14 @@
   <form>
 <div class="modal-body">
     <div id="quicksearch" class="input-group col-md-12">
-    <input ng-model="to" ng-model-options="{debounce: 100}"
+    <input id="to" ng-model="to" ng-model-options="{debounce: 100}"
     uib-typeahead="friend as friend.username for friend in friends | filter:$viewValue | limitTo:8"
     class="form-control ng-valid ng-dirty ng-not-empty ng-touched ng-valid-editable"
     aria-autocomplete="list" aria-expanded="false" aria-owns="typeahead-82-963" style="" type="text" placeholder="Send message to..." required>
       <div style="cursor:pointer" ng-click="" class="input-group-addon"><i class="fa fa-search"></i></div>
     </div>
   <div class="form-group">
-    <textarea class="form-control" rows="6" cols="60" ng-model="message" placeholder="Message.." required></textarea>
+    <textarea class="form-control" id="message" rows="6" cols="60" ng-model="message" placeholder="Message.." required></textarea>
   </div>
 </div>
 <div class="modal-footer">
