--- a/views/games.ejs
+++ b/views/games.ejs
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+	<meta name="theme-color" content="#00e676">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<link href="/css/games.css" rel="stylesheet" type="text/css">
@@ -58,7 +59,7 @@
 				      <div class="circle" ng-click="askPlatform(i); disable = !disable" title="Add to your library">
 				        <i ng-class="disable ? 'fa fa-check' : 'fa fa-plus'"></i>
 				      </div>
-				      <img ng-src="https://images.igdb.com/igdb/image/upload/t_cover_big_2x/{{i.cover.cloudinary_id}}" err-src="../asets/no-image-found.gif"/>
+				      <img ng-src="https://images.igdb.com/igdb/image/upload/t_cover_big/{{i.cover.cloudinary_id}}" err-src="../asets/no-image-found.gif"/>
 				      <figcaption><h4>{{i.name}}</strong></h4>
 								<p><b>Release date: </b>{{i.first_release_date | date: 'dd/MM/yyyy'}}</p>
 							<div id="summary" class="col col-md-12 col-sm-12 col-xs-12 nopadding">
