--- a/views/map.ejs
+++ b/views/map.ejs
@@ -5,7 +5,7 @@
     <title>Map</title>
     <link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
+    <meta name="theme-color" content="#9c27b0">
     <link href="/css/map.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
