--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,7 +4,9 @@
 	<title>My Games</title>
 	<link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
 	<meta charset="UTF-8">
+	<link rel="manifest" href="/manifest.json">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="theme-color" content="#2196F3">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" async>
