--- a/views/templates/footer.html
+++ b/views/templates/footer.html
@@ -1,5 +1,5 @@
 <footer>
-   <div class="text-center">
+   <div class="text-center" style="color: #2196F3">
       Private Beta V0.1 <span class="entypo-heart" title="Made with love"></span>
       <font size="1">Big thanks to <a id="IGDB" href="https://www.igdb.com/" target="_blank">IGDB</a> for providing this awesome API</font>
     </div>
