--- a/views/js/partials/gameRequests.html
+++ b/views/js/partials/gameRequests.html
@@ -1,4 +1,4 @@
-<link href="/css/requests.css" rel="stylesheet" type="text/css">
+<link href="/css/requests.css" rel="stylesheet" type="text/css" async>
 <div class="col col-md-12 tab-pane fade in active" ng-show="game_requests">
   <ul class="list" >
     <li class="list_item" ng-repeat="i in gamerequests">
