--- a/views/js/partials/messages.html
+++ b/views/js/partials/messages.html
@@ -19,7 +19,7 @@
     document.getElementById('msgBadge').innerHTML = parseInt(currentMessageCount, 10) - 1;
   });
 </script>
-<link href="/css/messages.css" rel="stylesheet" type="text/css">
+<link href="/css/messages.css" rel="stylesheet" type="text/css" async>
 <div ng-hide="messages_view">
 <div class="toolbar col col-md-10">
   <button id="new_msg" class="btn btn-info col-md-2 col-sm-3" data-toggle="modal" data-target="#newMessage"><b>New Message <span class="fa fa-envelope"></span></button>
