--- a/views/js/partials/mygames.html
+++ b/views/js/partials/mygames.html
@@ -5,7 +5,7 @@
         <i class="fa fa-check"></i>
         <i class="fa fa-times"></i>
       </div>
-      <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/{{i.cover}}" err-src="../asets/no-image-found.gif"/>
+      <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/{{i.cover}}" alt="Cover Image" err-src="../asets/no-image-found.gif"/>
       <figcaption><h3>{{i.name}}</h3></figcaption>
       <p class="platform">Platfrom: </p><span class="label label-primary platform"><i class="fa fa-gamepad" aria-hidden="true"></i> {{i.platform}}</span>
     </figure>
