--- a/views/css/games.css
+++ b/views/css/games.css
@@ -65,25 +65,24 @@ body {
 }
 
 main {
-  display: -webkit-box;
-  display: -moz-box;
   display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
   display: flex;
-  -webkit-box-orient: vertical;
-  -moz-box-orient: vertical;
-  -o-box-orient: vertical;
+  -webkit-flex-orient: vertical;
+  -moz-flex-orient: vertical;
+  -o-flex-orient: vertical;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
   min-height: 100%;
 }
 .content {
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  -o-box-flex: 1;
-  box-flex: 1;
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -o-flex: 1;
+  flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
@@ -128,7 +127,7 @@ footer {
   width: 100%;
   overflow: hidden;
   display: -webkit-flex;
-  display: -ms-flexbox;
+  display: -ms-flex;
   display: flex;
 
   -webkit-flex-wrap: wrap;
@@ -140,7 +139,7 @@ footer {
   padding-top: 15px;
   float: left;
   display: -webkit-flex;
-  display: -ms-flexbox;
+  display: -ms-flex;
   display: flex;
 }
 .list_item img {
