--- a/views/css/heart_animation.css
+++ b/views/css/heart_animation.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'entypo';
-  src: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-90/entypo.woff') format('woff');
+  src: url('../asets/entypo.woff') format('woff');
 }
 .entypo-heart:before{
   content:"\2665";
