--- a/views/games.ejs
+++ b/views/games.ejs
@@ -3,6 +3,8 @@
 <head>
 	<title>Games</title>
 	<meta charset="UTF-8">
+	<meta name="theme-color" content="#2196F3">
+	<link rel="manifest" href="/manifest2.json">
 	<link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<meta name="theme-color" content="#00e676">
@@ -59,7 +61,7 @@
 				      <div class="circle" ng-click="askPlatform(i); disable = !disable" title="Add to your library">
 				        <i ng-class="disable ? 'fa fa-check' : 'fa fa-plus'"></i>
 				      </div>
-				      <img ng-src="https://images.igdb.com/igdb/image/upload/t_cover_big/{{i.cover.cloudinary_id}}" err-src="../asets/no-image-found.gif"/>
+				      <img ng-src="https://images.igdb.com/igdb/image/upload/t_cover_big/{{i.cover.cloudinary_id}}" alt="Cover Image" err-src="../asets/no-image-found.gif"/>
 				      <figcaption><h4>{{i.name}}</strong></h4>
 								<p><b>Release date: </b>{{i.first_release_date | date: 'dd/MM/yyyy'}}</p>
 							<div id="summary" class="col col-md-12 col-sm-12 col-xs-12 nopadding">
