--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,6 +4,8 @@
 	<title>local Game</title>
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#2196F3">
+	<link rel="manifest" href="/manifest2.json">
+	<link rel="manifest" href="/manifest2.json">
 	<link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -22,7 +24,7 @@
 					<div class="centering">
 						<div class="col col-xs-11 col-xs-offset-1 col-sm-8 col-sm-offset-4 col-md-8 col-md-offset-5">
 							<div id="logo" class="col col-xs-11 col-sm-8 col-md-8">
-								<img id="app_logo" src="/asets/logo_title.svg" class="svg">
+								<img id="app_logo" src="/asets/logo_title.svg" alt="localGame" class="svg">
 						</div>
 	  				<div class="col-xs-12 col-sm-12 col-md-12" id="social">
 			        <div class="col-xs-4 col-sm-2 col-md-1">
