--- a/views/map.ejs
+++ b/views/map.ejs
@@ -5,7 +5,8 @@
     <title>Map</title>
     <link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="theme-color" content="#9c27b0">
+    <meta name="theme-color" content="#2196F3">
+    <link rel="manifest" href="/manifest2.json">
     <link href="/css/map.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
@@ -46,7 +47,7 @@
                   <div class="panel-body">
                       <form name ="addForm" novalidate>
                           <div class="form-group">
-                            <label for="distance">Location <i class="fa fa-location-arrow" aria-hidden="true"></i></label>
+                            <label for="location">Location <i class="fa fa-location-arrow" aria-hidden="true"></i></label>
                             <input type="text" class="form-control" id="location" placeholder="City, Country or Postcode" ng-model="formData.location">
                           </div>
                           <div class="form-group">
@@ -63,7 +64,7 @@
                                <option>Nintendo</option>
                              </select>
                              <label for="game">Game</label>
-                             <input type="text" ng-model="search" ng-model-options="{debounce: 100}" placeholder="Search for games..."
+                             <input type="text" id="game" ng-model="search" ng-model-options="{debounce: 100}" placeholder="Search for games..."
                    				uib-typeahead="game.name for game in sugestions($viewValue)"
                						aria-autocomplete="list" aria-expanded="false" aria-owns="typeahead-82-963"
                    				typeahead-no-results="noResults" class="form-control">
