--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,21 +1,24 @@
 <!doctype html>
-<html ng-app="gameApp">
+<html ng-app="gameApp" async>
 <head>
 	<title>My Games</title>
 	<link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
 	<meta charset="UTF-8">
-	<link rel="manifest" href="/manifest.json">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="theme-color" content="#2196F3">
+	<link rel="manifest" href="/manifest2.json">
+	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+	<meta http-equiv="Pragma" content="no-cache" />
+	<meta http-equiv="Expires" content="0" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" async>
-	<link href="/css/profile.css" rel="stylesheet" type="text/css">
-	<link href="/css/navbar.css" rel="stylesheet" type="text/css">
-	<link href="/css/mygames.css" rel="stylesheet" type="text/css">
+	<link href="/css/profile.css" rel="stylesheet" type="text/css" async>
+	<link href="/css/navbar.css" rel="stylesheet" type="text/css" async>
+	<link href="/css/mygames.css" rel="stylesheet" type="text/css" async>
 	<link href="/css/heart_animation.css" rel="stylesheet" type="text/css" async>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css" async>
-	<link rel="stylesheet" href="../../css/loader_animation.css" type="text/css" async><!-- loading animation Stylesheet -->
+	<link rel="stylesheet" href="../../css/loader_animation.css" type="text/css"><!-- loading animation Stylesheet -->
 
 	<script src="//cdn.jsdelivr.net/jdenticon/1.4.0/jdenticon.min.js" async></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
