--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/profile#/mygames"><img id="logo" src="/asets/logo_title.svg" class="svg"></a>
+    <a class="navbar-brand" href="/profile#/mygames"><img id="logo" src="/asets/logo_title.svg" alt="localGame" class="svg"></a>
   </div>
   <div class="collapse navbar-collapse" id="navbar-collapse-1">
     <ul class="nav navbar-nav">
@@ -21,7 +21,7 @@
           <h4 id="user_text">{{username}}</h4>
         </div>
         <div id="profile_pic">
-          <a href="/profile#/mygames"><svg id="identicon" width="40" height="40" /></a>
+          <a href="/profile#/mygames"><svg id="identicon" alt="LocalGame" width="40" height="40" /></a>
         </div>
         <div id="logout">
           <a id="logout_icon"href="/logout"cd ><i class="fa fa-sign-out fa-lg" aria-hidden="true"></i></a>
