--- a/views/css/user.css
+++ b/views/css/user.css
@@ -201,3 +201,12 @@ box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
 #error {
   margin-left: 10px;
 }
+#platformLogo {
+  height: 15px;
+  width: 15px;
+}
+.platform {
+  display: inline-block;
+  margin-right: 10px;
+  padding: 5px;
+}
