--- a/views/games.ejs
+++ b/views/games.ejs
@@ -4,7 +4,7 @@
 	<title>Games</title>
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#2196F3">
-	<link rel="manifest" href="/manifest2.json">
+	<link rel="manifest" href="/manifest.json">
 	<link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<meta name="theme-color" content="#00e676">
