--- a/views/map.ejs
+++ b/views/map.ejs
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#2196F3">
-    <link rel="manifest" href="/manifest2.json">
+    <link rel="manifest" href="/manifest.json">
     <link href="/css/map.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
