--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,7 +5,7 @@
 	<link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#2196F3">
-	<link rel="manifest" href="/manifest2.json">
+	<link rel="manifest" href="/manifest.json">
 	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="0" />
