--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,6 +4,7 @@
 	<title>localGame</title>
 	<link rel="icon" type="image/svg" href="/asets/logo.svg">
 	<meta charset="UTF-8">
+	<link rel="manifest" href="/manifest.json">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
