Ready for public release V1.0

--- a/views/templates/footer.html
+++ b/views/templates/footer.html
@@ -1,6 +1,6 @@
 <footer>
    <div class="text-center" style="color: #2196F3">
-      Private Beta V0.1 <span class="entypo-heart" title="Made with love"></span>
+      Public release V1.0 <span class="entypo-heart" title="Made with love"></span>
       <font size="1">Big thanks to <a id="IGDB" href="https://www.igdb.com/" target="_blank" rel="noopener">IGDB</a> for providing this awesome API</font>
     </div>
 </footer>
