Changed favicon type from svg to png, due to not all browsers supporting it

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,7 +2,7 @@
 <html ng-app="gameApp">
 <head>
 	<title>localGame</title>
-	<link rel="icon" type="image/svg" href="/asets/logo.svg">
+	<link rel="icon" type="image/png" href="/asets/favicon.png">
 	<meta charset="UTF-8">
 	<link rel="manifest" href="/manifest.json">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -39,7 +39,7 @@
 							</div>
 							<div class="col-xs-10 col-sm-8 col-md-4 text-center">
 								<div id="moto">
-									<h4><span class="fa fa-heart" style="color: red"></span> It's free! So go on and sign up.</h4>
+									<h4 style="color: white"><span class="fa fa-heart" style="color: red"></span> It's free! So go on and sign up.</h4>
 								</div>
 							</div>
 						</div>
