--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#2196F3">
 	<link rel="manifest" href="/manifest.json">
-	<link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
+	<link rel="icon" type="image/png" href="/asets/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
