--- a/views/map.ejs
+++ b/views/map.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Map</title>
-    <link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
+    <link rel="icon" type="image/png" href="/asets/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#2196F3">
     <link rel="manifest" href="/manifest.json">
