--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,7 +2,7 @@
 <html ng-app="gameApp" async>
 <head>
 	<title>My Games</title>
-	<link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
+	<link rel="icon" type="image/png" href="/asets/favicon.png">
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#2196F3">
 	<link rel="manifest" href="/manifest.json">
